--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,12 +14,7 @@
 	    <%= yield %>
 	  </div>
 
-	  <div id="footer">
-	    <div class="container">
-	      <p> Serge Lafontaine</p>
-	    </div>
-	  </div>
-
+	  <%= render 'layouts/footer' %>
 
   </body>
 </html>
