--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -36,7 +36,7 @@ $navbar-default-bg: #073815;
 	font-weight: bold;
 }
 .jumbotron h2 {
-	color: black;
+	color: #fff;
 	text-align: center;
 	margin-bottom: 30px;
 	letter-spacing: -1px;
