--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -60,3 +60,22 @@ $navbar-default-bg: #073815;
   background-color: #073815;
   color: #fff;
 }
+
+
+.description {
+	margin-top: 0;
+}
+
+
+.well a {
+	color: #073815 ;
+}
+
+.colormatch a {
+	color: #073815 ;
+}
+
+
+.chef_info {
+	margin-top: 10px;
+}
