--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -79,3 +79,13 @@ $navbar-default-bg: #073815;
 .chef_info {
 	margin-top: 10px;
 }
+
+
+.recipe-action {
+	padding-top: 5px;
+
+	a {
+		color: #fff;
+	}
+
+}
