--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -25,6 +25,7 @@
 		<%= link_to "Delete this recipe", recipe_path(@recipe), method: :delete,
 																			data: {confirm: "Are you sure?"},
 																			class: "btn btn-xs btn-danger" %>
+		<%= link_to "Return to recipes listing", recipes_path, class: "btn btn-xs btn-primary" %>
 	</div>
 
 
