--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -89,3 +89,14 @@ $navbar-default-bg: #073815;
 	}
 
 }
+
+.listing {
+	list-style: none;
+	padding-left: 0;
+}
+
+.chef-title {
+	color: #073815;
+	font-weight: bold;
+	font-size: 1.25em;
+}
