--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -20,12 +20,21 @@
 		</p>
 	</div>
 
+
+
+
 	<div class="recipe-action">
-		<%= link_to "Edit this recipe", edit_recipe_path(@recipe), class: "btn btn-xs btn-warning" %>
-		<%= link_to "Delete this recipe", recipe_path(@recipe), method: :delete,
-																			data: {confirm: "Are you sure?"},
-																			class: "btn btn-xs btn-danger" %>
-		<%= link_to "Return to recipes listing", recipes_path, class: "btn btn-xs btn-primary" %>
+		<% if logged_in? && current_chef == @recipe.chef %>
+
+			<%= link_to "Edit this recipe", edit_recipe_path(@recipe), class: "btn btn-xs btn-warning" %>
+			<%= link_to "Delete this recipe", recipe_path(@recipe), method: :delete,
+																				data: {confirm: "Are you sure?"},
+																				class: "btn btn-xs btn-danger" %>
+
+
+
+		<% end %>
+			<%= link_to "Return to recipes listing", recipes_path, class: "btn btn-xs btn-primary" %>
 	</div>
 
 
