--- a/app/views/chefs/index.html.erb
+++ b/app/views/chefs/index.html.erb
@@ -10,8 +10,12 @@
 					<li><%= link_to gravatar_for(chef), chef_path(chef) %></li>
 					<li class="chef-title"><%= link_to chef.chefname.capitalize, chef_path(chef) %></li>
 					<li><small><%= pluralize(chef.recipes.count, "recipe") if chef.recipes.count %></small></li>
-					<li><%= link_to "Delete this chef", chef_path(chef), method: :delete, 
-									data: {confirm: "Are you sure you want to delete chef/recipes"} %></li>
+
+					<% if logged_in? && current_chef.admin? && !chef.admin?%>
+						<li><%= link_to "Delete this chef", chef_path(chef), method: :delete, 
+										data: {confirm: "Are you sure you want to delete chef/recipes"} %>
+						</li>
+					<% end %>
 				</div>
 			</div>
 		</ul>
