--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -13,7 +13,7 @@
 
 			<p><span class="quiet"><small>Created <%= time_ago_in_words(recipe.created_at)%> ago</small></span></p>
 
-			<% if logged_in? && current_chef == recipe.chef %>
+			<% if logged_in? && (current_chef == recipe.chef || current_chef.admin?)%>
 
 				<div class="recipe-actions">
 					
